<resources>
    <string name="app_name">ValidateViewVisibility</string>
    <string name="txt_first">Element 1\nGame of Thrones is roughly based on the storylines of the A Song of Ice and Fire book series by George R. R. Martin, set in the fictional Seven Kingdoms of Westeros and the continent of Essos. The series follows several simultaneous plot lines. The first story arc follows a war of succession among competing claimants for control of the Iron Throne of the Seven Kingdoms, with other noble families fighting for independence from the throne. The second concerns the exiled scion\'s actions to reclaim the throne; the third chronicles the threat of the impending winter, as well as the legendary creatures and fierce peoples of the North.</string>
    <string name="txt_second">Element 2\nHouse of the Dragon takes place two centuries before the War of the Five Kings, focusing on the Dance of the Dragons. The show is based on George R. R. Martin\'s Fire and Blood, along with the novella The Princess and the Queen and the novelette The Rogue Prince.</string>
    <string name="txt_third">Element 3\nThe Walking Dead takes place after the onset of a worldwide zombie apocalypse. The zombies, referred to as "walkers", shamble towards living humans and other creatures to eat them. The series centers on sheriff\'s deputy Rick Grimes, who wakes up from a coma. While in a coma, the world has been taken over by walkers. He becomes the leader of a group of survivors from the Atlanta, Georgia, region as they attempt to sustain and protect themselves not only against attacks by walkers but by other groups of survivors willing to use any means necessary to stay alive.</string>
    <string name="txt_fourth">Element 4\nAmerican Horror Story is an American anthology horror television series. The first installment in the American Story media franchise, each season is conceived as a self-contained miniseries, following a different set of characters and settings, and a storyline with its own "beginning, middle, and end." Some plot elements of each season are loosely inspired by true events.</string>
    <string name="txt_fifth">Element 5\nBreaking Bad follows Walter White, a meek high school chemistry teacher who transforms into a ruthless player in the local methamphetamine drug trade, driven by a desire to financially provide for his family after being diagnosed with terminal lung cancer. Initially making only small batches of meth with his former student Jesse Pinkman in a rolling meth lab, Walter and Jesse eventually expand to make larger batches of a special blue meth that is incredibly pure and creates high demand. Walter takes on the name "Heisenberg" to mask his identity. Because of his drug-related activities, Walter eventually finds himself at odds with his family, the Drug Enforcement Administration (DEA) through his brother-in-law Hank Schrader, the local gangs, and the Mexican drug cartels (including their regional distributors), putting him and his family\'s lives at risk.</string>
    <string name="txt_sixth">Element 6\nStranger Things is set in the fictional rural town of Hawkins, Indiana, during the early 1980s. The nearby Hawkins National Laboratory ostensibly performs scientific research for the United States Department of Energy, but secretly does experiments into the paranormal and supernatural, including those that involve human test subjects. Inadvertently, they have created a portal to an alternate dimension, "the Upside Down". The influence of the Upside Down starts to affect the unknowing residents of Hawkins in calamitous ways. The first season begins in November 1983, when Will Byers is abducted by a creature from the Upside Down. His mother, Joyce, and the town\'s police chief, Jim Hopper, search for Will. At the same time, a young psychokinetic girl called Eleven escapes from the laboratory and assists Will\'s friends, Mike, Dustin, and Lucas, in their own efforts to find Will.</string>
    <string name="txt_element1">Element 1</string>
    <string name="txt_element2">Element 2</string>
    <string name="txt_element3">Element 3</string>
    <string name="txt_element4">Element 4</string>
    <string name="txt_element5">Element 5</string>
    <string name="txt_element6">Element 6</string>
    <string name="txt_visibility">Visible</string>
    <string name="txt_true">true</string>
    <string name="txt_false">false</string>
</resources>